# RAG

./: .gitignore  RAG_pipeline.py  README.md  Untitled  app.py  backend.py  config.json  embedding_pipeline.py  eval_results_3.csv  eval_results_4.csv  eval_runner.py  experiment_pipeline.py  fastapi_app.py  frontend.py  interface.py  pyproject.toml  requirements.txt
Data/Documents/: fake inflation.csv
