[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4==4.14.3",
    "chromadb==1.3.5",
    "dotenv==0.9.9",
    "fastapi>=0.124.4",
    "httptools==0.7.1",
    "langchain==1.1.2",
    "langchain-chroma>=1.1.0",
    "langchain-community==0.4.1",
    "langchain-openai==1.1.0",
    "pypdf==6.4.0",
    "python-multipart>=0.0.20",
    "python-pptx>=1.0.2",
    "sentence-transformers==5.1.2",
    "streamlit>=1.52.1",
    "watchfiles==1.1.1",
    "websockets==15.0.1",
]
